@@ -12,6 +12,11 @@ Version 2.7.0 (v2.7.0 RTM)
 		 with RegisterAll (work item 20984).
 		-[Core] AppendToCollection extension methods now support open-generic types (work item 20985).
 
+	Bug fixes:
+		-[Core]: In case a constructor of a type contained a primitive dependency, while the type was resolved
+		 as part of a collection or directly by building the Registration, the thrown exception message was
+		 misleading. (work item 20986).
+
 
 Version 2.6.2 (v2.6.2 RTM) 2014-12-24
 
